traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:5: error: not found: value baisseBosse
    baisseBosse();
    ^